--- a/css/styles.css
+++ b/css/styles.css
@@ -170,15 +170,9 @@ margin-right: 24px;
 }
 
 .visually-hidden{
-    overflow: hidden;
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    padding: 0;
-    clip: rect(0,0,0,0);
-    white-space: nowrap;
-    border: 0;
+ opacity: 0;
+ pointer-events: none;
+ visibility: hidden;
 }
 
 .subtitle{
@@ -239,6 +233,7 @@ margin-right: 24px;
 
 .portfolio-item{
     width: calc((100% - 48px) / 3);
+    border-top: none; 
     border-bottom: 1px solid var(--border-bottom-color);
   margin-bottom: 48px; }
 
