--- a/css/styles.css
+++ b/css/styles.css
@@ -169,10 +169,17 @@ margin-right: 24px;
     flex-basis: calc((100% -3*24px)/4);
 }
 
-.visually-hidden{
- opacity: 0;
- pointer-events: none;
- visibility: hidden;
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0, 0, 0, 0);
+  overflow: hidden;
 }
 
 .subtitle{
@@ -250,8 +257,7 @@ margin-right: 24px;
 }
 .portfolio-item .text-block{
     padding: 32px 16px;
-    border-top: none;
-    border: 1px solid var(--border-bottom-color);
+   
 }
 /*footer*/
 .footer-section {
