--- a/css/styles.css
+++ b/css/styles.css
@@ -241,7 +241,7 @@ margin-right: 24px;
 .portfolio-item{
     width: calc((100% - 48px) / 3);
     border-top: none; 
-    border-bottom: 1px solid var(--border-bottom-color);
+    border: 1px solid var(--border-bottom-color);
   margin-bottom: 48px; }
 
 .portfolio-item:not(:nth-child(3n)){
