--- a/css/styles.css
+++ b/css/styles.css
@@ -240,7 +240,7 @@ margin-right: 24px;
 
 .portfolio-item{
     width: calc((100% - 48px) / 3);
-    border: 1px solid var(--border-bottom-color);
+    border: 1px solid solid #e7e9fc;
      border-top: none; 
   margin-bottom: 48px; }
 
