--- a/css/styles.css
+++ b/css/styles.css
@@ -257,6 +257,7 @@ margin-right: 24px;
 }
 .portfolio-item .text-block{
     padding: 32px 16px;
+    border: 1px solid var(--border-bottom-color); 
    
 }
 /*footer*/
